--- a/css/index.scss
+++ b/css/index.scss
@@ -23,9 +23,10 @@
     }
     .logo {
         display: block;
+        background-color: #fff;
         img {
             float: left;
-            height: 46px;
+            height: 47px;
             width: 100%;
         }
     }
